--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>E-commerce app</title>
+  <title>Fashion website</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>E-commerce app</h1>
+  <h1>Fashion website</h1>
 </body>
 </html>
