--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fashion website</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/9cb176f7bd.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./assets/fonts/all.min.css">  
-  <link rel="stylesheet" href="reset.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./assets/css/reset.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
   <div class="container">
@@ -69,7 +71,9 @@
       </div>
       
       <div class="logo-container">
-        <img src="./assets/images/logo.jpg" alt="Fashion logo" width="200" height="200">
+        <a href="index.html">
+          <img src="./assets/images/logo.png" alt="Fashion logo" width="80" height="80">
+        </a>
       </div>
 
       <div class="cart-container">
@@ -151,11 +155,7 @@
       <section class="hero-section">
         <a href="#collections/sale">
           <div class="hero-image mobile-only">
-            <picture>
-              <source media="(max-width: 649px)" srcset="./assets/images/hero-650×782px.jpg"/>
-              <source media="(min-width: 650px)" srcset="./assets/images/hero-1920×1066px.jpg"/>
-              <img src="./assets/images/hero-1920×1066px.jpg" alt="Hero" width="300">
-            </picture>
+            <img src="./assets/images/hero-1920×1066px.jpg" alt="Hero" width="300">
           </div>
         </a>
       </section>
@@ -438,7 +438,7 @@
 
     <footer>
       <div class="footer-logo-container">
-        <img src="./assets/images/logo.jpg" alt="Fashion logo" width="200" height="200">
+        <img src="./assets/images/logo.png" alt="Fashion logo" width="80" height="80">
       </div>
       <div class="footer-socials-container">
         <a href="#facebook" title="Facebook"><i class="fa-brands fa-facebook-f"></i></a>
@@ -451,5 +451,6 @@
       </div>
     </footer>
   </div>
+  <script src="./assets/js/app.js"></script>
 </body>
 </html>
